--- a/index.html
+++ b/index.html
@@ -50,10 +50,11 @@
     font-size: 14px;
 }
 .Text1 {
+  color: white;
   font-family:'Roboto';
   margin-left:250px;
   margin-right: auto;
-  font-weight: 700px;
+  font-weight: 700;
   margin-left:400px;
   padding-top: 200px;
 }
@@ -62,7 +63,7 @@
   font-family:'Roboto';
   font-weight: 700;
   display: flex;
-  margin-right:400;
+  margin-left:center;
 }
 .TextH {
   font-family:'Roboto';
@@ -70,6 +71,7 @@
 }
 
 .button {
+  color: white;
   font-family:'Roboto';
   font-weight: 700;
   background-color:#2196F3;
@@ -84,7 +86,7 @@
 .TextAndButton{
 
 height: 500px;
-background-color:grey ;
+background-color:#2F303A ;
 }
 .verse {
   display: table;
@@ -95,9 +97,9 @@ background-color:grey ;
 .WhatWeDo {
   font-family:'Roboto';
   width: 366px;
-  height:42px ;
+  height:42px;
   top: 969px;
-  left:617 ;
+  left:617px;
   font-weight: 700;
   margin-left:500px;
   margin-right: auto;
@@ -105,41 +107,41 @@ background-color:grey ;
 .f1 {
 width:370px;
 height:294px;
-top: 1061;
-left: 215;
+top: 1061px;
+left: 215px;
 margin-left:100px;
 }
 .f2 {
   width:370px;
 height:294px;
-top: 1061;
-left: 215;
+top: 1061px;
+left: 215px;
 }
 .f3 {
   width:370px;
 height:294px;
-top: 1061;
-left: 215;
+top: 1061px;
+left: 215px;
 }
 .Hyman1 {
   width:300px;
 height:260px;
-top: 1635;
+top: 1635px;
 }
 .Hyman2 {
   width:300px;
 height:240px;
-top: 1635;
+top: 1635px;
 }
 .Hyman3 {
   width:300px;
 height:240px;
-top: 1635;
+top: 1635px;
 }
 .Hyman4 {
   width:300px;
 height:240px;
-top: 1635;
+top: 1635px;
 }
 
 .Tel2 {
@@ -147,7 +149,7 @@ font-family: 'Roboto';
 width: 231px;
 height: 21px;
 top: 2268px;
-margin-left:215;
+margin-left:0px;
 font-weight: 400;
 
 }
@@ -158,7 +160,7 @@ font-weight: 400;
 width: 231px;
 height: 21px;
 top: 2268px;
-margin-left:215;
+margin-left:0px;
 font-weight: 400;
 }
 
@@ -168,33 +170,33 @@ font-weight: 400;
 width: 231px;
 height: 21px;
 top: 2268px;
-margin-left:215;
+margin-left:0px;
 font-weight: 400;
 }
 li {
 list-style: none;
-
 }
-
-
-
-
+.footer{
+background-color:#2F303A ;
+}
+.header{
+        border: 1.5px solid #bdbdb8f1;
+       }
     </style>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
 </head>
-<body link="#000000" vlink="#000000" alink="#0000ff">
+<body link="#000000"vlink="#000000"alink="#0000ff">
   <!-- Header -->
-  <header>
-<a class="Web"  href="URL"  >Web<span class="Studio">Studio</span></a>
-<a class="Studio2" href="URL">Студія</li></a>
-<a class="PF" href="URL">Портфоліо</li></a>
-<a class="Conacts" href="URL">Контакти</li></a>
-<a class="GM" href="URL">info@devstudio.com</a>
-<a class="Telephone" href="tel:+38 099 111 11 11">+38 099 111 11 11</a>
+  <header class="header">
+<a class="Web"href="URL">Web<span class="Studio">Studio</span></a>
+<a class="Studio2"href="URL">Студія</li></a>
+<a class="PF"href="Portfolio.html">Портфоліо</li></a>
+<a class="Conacts"href="URL">Контакти</li></a>
+<a class="GM"href="URL">info@devstudio.com</a>
+<a class="Telephone"href="tel:+38 099 111 11 11">+38 099 111 11 11</a>
   </header>
   <!-- /header -->
   <!-- Main -->
@@ -259,7 +261,7 @@ list-style: none;
   </main>
   <!-- /Main -->
   <!-- Footer -->
-  <footer>
+  <footer class="footer">
     <a class="Web" href="URL">Web
     </a>
     <a class="Studio" href="URL">Studio
@@ -270,7 +272,7 @@ list-style: none;
     <a class="GM2" href="mailto:info@example.com">info@example.com</a>
     <br>
     
-    <a  class="Tel2" href="tel:+38 099 111 11 11">+38 099 111 11 11</a>
+    <a class="Tel2" href="tel:+38 099 111 11 11">+38 099 111 11 11</a>
     
   </footer>
   <!-- /Footer -->
