adabudi da bu di da bu day

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -1,65 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <style>
-        .Web {
-           font-family:'Raleway' ;
-         font-size: 26px; 
-         color: #0000ff;
-        }
-        .Studio  {
-           font-family:'Oleo Script';
-         font-size: 26px;
-         color: black;
-        }
-        a {
-           text-decoration: none; 
-          }
-          a:hover {
-           color: #0000ff; 
-           
-          }
-          .Studio2 {
-           font-weight: 500;
-           font-family:'Roboto';
-           padding: 40px 45px;
-           font-size: 14px;
-       }
-       .PF {
-         font-weight: 500;
-         font-family:'Roboto';
-         padding: 40px 45px;
-           font-size: 14px;
-       }
-       .Conacts {
-         font-weight: 500;
-         font-family:'Roboto';
-         padding: 40px 45px;
-           font-size: 14px;
-       }
-       .GM {
-         font-weight: 500;
-         font-family:'Roboto';
-         padding: 40px 45px;
-           font-size: 14px;
-       }
-       .Telephone {
-         font-weight: 500;
-         font-family:'Roboto';
-           padding: 120px 125px;
-           font-size: 14px;
-       }
-       .header{
-        border: 1.5px solid #bdbdb8f1;
-       }
-       .footer{
-background-color:#2F303A ;
-}
-       </style>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./styles.css" />
 </head>
 <body>
 <header class="header">
