--- a/index.html
+++ b/index.html
@@ -1,192 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <style>
- .Web {
-	font-family:'Raleway' ;
-  font-size: 26px; 
-  color: #0000ff;
- }
- .Studio  {
-	font-family:'Oleo Script';
-  font-size: 26px;
-  color: black;
- }
- a {
-    text-decoration: none; 
-   }
-   a:hover {
-    color: #0000ff; 
-    
-   }
-   .Studio2 {
-    font-weight: 500;
-    font-family:'Roboto';
-    padding: 40px 45px;
-    font-size: 14px;
-}
-.PF {
-  font-weight: 500;
-  font-family:'Roboto';
-  padding: 40px 45px;
-    font-size: 14px;
-}
-.Conacts {
-  font-weight: 500;
-  font-family:'Roboto';
-  padding: 40px 45px;
-    font-size: 14px;
-}
-.GM {
-  font-weight: 500;
-  font-family:'Roboto';
-  padding: 40px 45px;
-    font-size: 14px;
-}
-.Telephone {
-  font-weight: 500;
-  font-family:'Roboto';
-    padding: 120px 125px;
-    font-size: 14px;
-}
-.Text1 {
-  color: white;
-  font-family:'Roboto';
-  margin-left:250px;
-  margin-right: auto;
-  font-weight: 700;
-  margin-left:400px;
-  padding-top: 200px;
-}
-
-.Text {
-  font-family:'Roboto';
-  font-weight: 700;
-  display: flex;
-  margin-left:center;
-}
-.TextH {
-  font-family:'Roboto';
-  display: flex;
-}
-
-.button {
-  color: white;
-  font-family:'Roboto';
-  font-weight: 700;
-  background-color:#2196F3;
-  border:none;
-  width: 200px;
-  height: 50px;
-  top: 410px;
-  left: 726px;
-  margin-left:550px;
-  margin-right: auto;
-}
-.TextAndButton{
-
-height: 500px;
-background-color:#2F303A ;
-}
-.verse {
-  display: table;
-  margin: 0 auto; /* для центрирования display: table; не нужно указывать ширину блока, она рассчитывается самостоятельно */ 
-  white-space: pre-line; /* не нужен <br> */ 
-  word-wrap: break-word; /* чтобы слова переносились на маленьком экране */ 
-}
-.WhatWeDo {
-  font-family:'Roboto';
-  width: 366px;
-  height:42px;
-  top: 969px;
-  left:617px;
-  font-weight: 700;
-  margin-left:500px;
-  margin-right: auto;
-}
-.f1 {
-width:370px;
-height:294px;
-top: 1061px;
-left: 215px;
-margin-left:100px;
-}
-.f2 {
-  width:370px;
-height:294px;
-top: 1061px;
-left: 215px;
-}
-.f3 {
-  width:370px;
-height:294px;
-top: 1061px;
-left: 215px;
-}
-.Hyman1 {
-  width:300px;
-height:260px;
-top: 1635px;
-}
-.Hyman2 {
-  width:300px;
-height:240px;
-top: 1635px;
-}
-.Hyman3 {
-  width:300px;
-height:240px;
-top: 1635px;
-}
-.Hyman4 {
-  width:300px;
-height:240px;
-top: 1635px;
-}
-
-.Tel2 {
-font-family: 'Roboto';
-width: 231px;
-height: 21px;
-top: 2268px;
-margin-left:0px;
-font-weight: 400;
-
-}
-
-
-.Map {
-  font-family: 'Roboto';
-width: 231px;
-height: 21px;
-top: 2268px;
-margin-left:0px;
-font-weight: 400;
-}
-
-
-.GM2 {
-  font-family: 'Roboto';
-width: 231px;
-height: 21px;
-top: 2268px;
-margin-left:0px;
-font-weight: 400;
-}
-li {
-list-style: none;
-}
-.footer{
-background-color:#2F303A ;
-}
-.header{
-        border: 1.5px solid #bdbdb8f1;
-       }
-    </style>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./styles.css" />
 </head>
 <body link="#000000"vlink="#000000"alink="#0000ff">
   <!-- Header -->
@@ -234,28 +53,28 @@ background-color:#2F303A ;
 <br>
 <!-- Section We -->
 <section>
-<ul class="TextH">
-<li>
+  <div class="container">
+<div class="box">
   <img class="Hyman1" src="https://s3-alpha-sig.figma.com/img/8c1e/65c1/01b0562402f9066520924acac0be8dc7?Expires=1660521600&Signature=D-PGDvym4RmcR8baOQswZSZd~irKhCBYcvvPXVCcBCtJTSR7aPdCfYBr2PjjoJDZJg2ft1k1lLkVgY5D7bYB5Tf7R32voQ5cB~4BSPluOt66PxpZ0m5EZBKrWLlEawuXpb6ilh1WvO3plai-zc0TEMb4pIUYSTEnpptC5CX3PiXOCtJi-yjskLTp0CLdO030kCaUctRqp9r42qjncclus0xDpXFyKfi8Yz7fsGTRLmvFQicpn8TSsTkmIMv7~KlpfXOT5Tx932EqxZ2GmJ6dD5mMGMTef5R8oV3vA1JQgXjD~Itq4kMYLHKpZLwemV8Bub7u5vouQoFjsupe7NjA5Q__&Key-Pair-Id=APKAINTVSUGEWH5XD5UA" alt="img4">
   <h2 >Ігор Дем’яненко</h2>
   <p>Product Designer</p>
-</li>
-<li>
+</div>
+<div  class="box">
   <img class="Hyman2" src="https://s3-alpha-sig.figma.com/img/cbc1/4371/8ed9ff0c05008e3e7ae5285b05efd211?Expires=1660521600&Signature=KPF6zjxt9Hq4JYmrrVOrKcGzHNo8~7k4f~RD8ZRZUYDYpi-bCxOgym4LhtXXe~CWd-HtMEKZMuTS~CTl5yZTXRf-tqx4ZmeOiVATaymXDnMFz~NjOxTuGP33Z5JuZtAzZUDQGZZZ5WWVazepb5M2NF~30J5Isu2gCC~BSZn-LtKmLMtMjCHKQ1mpfzbKVyYa5qN4z9YLlY8ntGhupbgZSCkESZYhikTCQLlPS49BLtwAVTs3xOh-Pf5S0~57a8y2ty20TLI6n6j42kf3hAtqQjPsiARxa5HJCQ2waJvMt7qj1NS5dOT7xl-8PvagH7LiGDqr20TpVHQfm6OnA7q-IA__&Key-Pair-Id=APKAINTVSUGEWH5XD5UA" alt="img5">
   <h2>Ольга Репіна</h2>
   <p>Frontend Developer</p>
-</li>
-<li>
+  </div class="box">
+  <div class="box">
   <img class="Hyman3" src="https://s3-alpha-sig.figma.com/img/b9f5/1817/c03fb848ed9dfc89543bbe97156c3661?Expires=1660521600&Signature=SWcn8PiuzM8BtkcRcH6kf9SzA6dNsYWY6XmGL6kqatq~8ZQH53u8xS9CkLn17XVdrG7QLtXpl8SzWjX910PHfnfA98QjJwmNk9bBCl4z6-N9FLQvfdFvAcHGZHHzf1lSXTbsRJO8UeAx7ePs9qlWVrKp6FYLDMPjgn4iLo8gytsbDIAEoCPHeU0MYPhzCLFwZ4gcjRj0IMD~wicUHBrH2feob4DYoSr2GCcz7ZTKL5nmZIn8Sy8v5OvvsEJLNdxcMfJBOnmVFs2PK-pcCgEAQqq~oPDQcjnwHUbQDDdySZZ5PKl2ZT1X5mcpiOquOAMab4hfShb8S8qkoIJi8nsvTg__&Key-Pair-Id=APKAINTVSUGEWH5XD5UA" alt="img6">
   <h2>Микола Тарасов</h2>
   <p>Marketing</p>
-</li>
-<li>
+</div>
+<div class="box">
   <img class="Hyman4" src="https://s3-alpha-sig.figma.com/img/335d/4d84/7ff905b2d5f56aa0d2b29aa48e997cd8?Expires=1660521600&Signature=Kt-s8dESA4c6ssVGEOkjCEGuiBjYeozrYKsmqflsgkrA5uVSNtCZYSVG5IPHU8LkZkhkXYe~weXoxf81qgIt2Vqt3-KsTBqcVbhQoXcAn7LJPTqKpn0XQt9ybIDOCtGLL46CTG3sh86ESYaUyPYTHgp5ozWuAs40MRGyLujgNCImaOCVS7ySPh6Z9FuJg12M4hNtbqEnyZxnAp6RyXUPlPCvQwtE2o2K1WPb0Yk-sscldaG4bw-DSasZvNmvNJlLVbNVlqM77NtcqUsQXzC9lY9uIvIz2CMleQedSoAPXvI53yCG5ukOPN5HC9ufE0VuZyOprmMLoMrokOGbEKdPKA__&Key-Pair-Id=APKAINTVSUGEWH5XD5UA" alt="img7">
   <h2 >Михайло Єрмаков</h2>
   <p>UI Designer</p>
-</li>
-</ul>
+</div>
+</div>
 </section>
 <br>
   </main>
