--- a/Portfolio.html
+++ b/Portfolio.html
@@ -16,6 +16,36 @@
     <a class="GM"href="URL">info@devstudio.com</a>
     <a class="Telephone"href="tel:+38 099 111 11 11">+38 099 111 11 11</a>
 </header>
+<div class="container1">
+
+<div class="box1">
+ 
+  </div>
+  <div class="box1">
+    
+</div>
+  <div class="box1">
+
+  </div>
+  <div class="box1">
+
+  </div>
+  <div class="box1">
+
+  </div>
+  <div class="box1">
+
+  </div>
+<div class="box1">
+
+</div>
+<div class="box1">
+
+</div>
+<div class="box1">
+
+</div>
+</div>
 <footer class="footer">
     <a class="Web" href="URL">Web
     </a>
