--- a/Portfolio.html
+++ b/Portfolio.html
@@ -1,83 +1,162 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./styles.css" />
-</head>
-<body>
-  <header class="header">
-    <div class="container">
-       
-   <a class="logo" href="/index.html">Web<span class="header-color">Studio</span></a>
-   <ul class="heder-list">
-     <li class="heder-page">
-       <a class="heder-link" href="/">Студія</a>
-     </li>
-     <li class="heder-page">
-       <a class="heder-link" href="./portfolio.html">Портфоліо</a>
-     </li>
-     <li class="heder-page">
-       <a class="heder-link" href="URL">Контакти</a>
-     </li>
-   </ul>
-   <ul class="contacts-list">
-     <li class="contacts-item"><a class="heder-contacts"href="mailto:info@example.com">info@devstudio.com</a></li>
-     <li class="contacts-item"><a class="heder-contacts" href="tel:+380991111111">+38 099 111 11 11</a></li>
-   </ul>
-   </div>
-     </header>
-    <section class="p-hero-section">
-<div class="container">
-<ul class="p-hero-list"> 
-  <li class="p-hero-item">
-  <button  type="button" class="p-hero-button">
-  Усе
-  </button>
-</li>
-  <li class="p-hero-item">
-  <button type="button" class="p-hero-button">
-  Веб-сайти
-  </button>
-</li>
-  <li class="hero-item">
-    <button type="button" class="p-hero-button">
-  Застосунки
-    </button>
-</li>
-  <li class="hero-item">
-    <button type="button" class="p-hero-button">
-  Дизайн
-    </button>
-</li>
-  <li class="hero-item">
-    <button type="button" class="p-hero-button">
-  Маркетинг
-    </button>
-</li>
-</ul>
-</div>
-</section> 
-  <!-- Footer -->
-  <footer class="footer">
-    <div class="container">
-    <ul class="footer-list">
-    <li class="fotter-item">
-      <a class="logo" href="/index.html">Web<span class="footer-color">Studio</span></a>
-    </li>
-    <li class="fotter-item">
-    <address class="footer-map">м. Київ, пр-т Лесі Українки, 26</address>
-  </li>
-  <li class="fotter-item">
-    <a class="footer-mail" href="mailto:info@example.com">info@example.com</a>
-  </li>
-    <li class="fotter-item">
-    <a class="footer-tel" href="tel:+380991111111">+38 099 111 11 11</a>
-  </li>
-  </ul>
-</div>
-  </footer>
-</body>
+  </head>
+  <body>
+    <header class="header">
+      <div class="container">
+        <a class="logo" href="/index.html"
+          >Web<span class="header-color">Studio</span></a
+        >
+        <ul class="heder-list">
+          <li class="heder-page">
+            <a class="heder-link" href="/">Студія</a>
+          </li>
+          <li class="heder-page">
+            <a class="heder-link" href="./portfolio.html">Портфоліо</a>
+          </li>
+          <li class="heder-page">
+            <a class="heder-link" href="URL">Контакти</a>
+          </li>
+        </ul>
+        <ul class="contacts-list">
+          <li class="contacts-item">
+            <a class="heder-contacts" href="mailto:info@example.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="contacts-item">
+            <a class="heder-contacts" href="tel:+380991111111"
+              >+38 099 111 11 11</a
+            >
+          </li>
+        </ul>
+      </div>
+    </header>
+    <main>
+      <section class="button-section">
+        <div class="container">
+          <ul class="button-list">
+            <li class="button-item">
+              <button type="button" class="button-button">Усе</button>
+            </li>
+            <li class="button-item">
+              <button type="button" class="button-button">Веб-сайти</button>
+            </li>
+            <li class="button-item">
+              <button type="button" class="button-button">Застосунки</button>
+            </li>
+            <li class="button-item">
+              <button type="button" class="button-button">Дизайн</button>
+            </li>
+            <li class="button-item">
+              <button type="button" class="button-button">Маркетинг</button>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <!-- Section coments -->
+      <section class="product-section">
+        <div class="container">
+          <ul class="product-list">
+            <li class="product-item">
+              <img class="product-foto" src="./images/img.png" alt="img1" />
+              <h2 class="product-name">Технокряк</h2>
+              <p class="product-coment">Веб-сайт</p>
+            </li>
+            <li class="product-item">
+              <img
+                class="product-foto"
+                src="./images/imgbascetball.png"
+                alt="img1"
+              />
+              <h2 class="product-name">Постер New Orlean vs Golden Star</h2>
+              <p class="product-coment">Дизайн</p>
+            </li>
+            <li class="product-item">
+              <img
+                class="product-foto"
+                src="./images/imgfishrestoran.png"
+                alt="img1"
+              />
+              <h2 class="product-name">Ресторан Seafood</h2>
+              <p class="product-coment">Застосунок</p>
+            </li>
+            <li class="product-item">
+              <img
+                class="product-foto"
+                src="./images/imgheadphones.png"
+                alt="img1"
+              />
+              <h2 class="product-name">Проект Prime</h2>
+              <p class="product-coment">Маркетинг</p>
+            </li>
+            <li class="product-item">
+              <img class="product-foto" src="./images/imgboxses.png" alt="img1" />
+              <h2 class="product-name">Проект Boxes</h2>
+              <p class="product-coment">Застосунок</p>
+            </li>
+            <li class="product-item">
+              <img
+                class="product-foto"
+                src="./images/imgmonitor.png"
+                alt="img1"
+              />
+              <h2 class="product-name">Inspiration has no Borders</h2>
+              <p class="product-coment">Веб-сайт</p>
+            </li>
+            <li class="product-item">
+              <img class="product-foto" src="./images/imgbook.png" alt="img1" />
+              <h2 class="product-name">Видавництво Limited Edition</h2>
+              <p class="product-coment">Дизайн</p>
+            </li>
+            <li class="product-item">
+              <img class="product-foto" src="./images/imgculon.png" alt="img1" />
+              <h2 class="product-name">Проект LAB</h2>
+              <p class="product-coment">Маркетинг</p>
+            </li>
+            <li class="product-item">
+              <img
+                class="product-foto"
+                src="./images/imgnotepad.png"
+                alt="img1"
+              />
+              <h2 class="product-name">Growing Business</h2>
+              <p class="product-coment">Застосунок</p>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </main>
+    <!-- Footer -->
+    <footer class="footer">
+      <div class="container">
+
+        <a class="logo" href="/index.html"
+              >Web<span class="footer-color">Studio
+         </span>
+         </a>
+
+         <address class="footer-map">
+          м. Київ, пр-т Лесі Українки, 26
+        </address>
+
+        <ul class="footer-list"> 
+          <li class="fotter-item">
+            <a class="footer-mail" href="mailto:info@example.com"
+              >info@example.com</a
+            >
+          </li>
+          <li class="fotter-item">
+            <a class="footer-tel" href="tel:+380991111111">+38 099 111 11 11</a>
+          </li>
+        </ul>
+      </div>
+    </footer>
+  </body>
 </html>
