--- a/index.html
+++ b/index.html
@@ -1,133 +1,162 @@
 <!DOCTYPE html>
 <html lang="en">
-<head >
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./styles.css" />
-</head>
-<body>
-  <!-- Header -->
-  <header class="header">
- <div class="container">
-    
-<a class="logo" href="/index.html">Web<span class="header-color">Studio</span></a>
-<ul class="heder-list">
-  <li class="heder-page">
-    <a class="heder-link" href="/">Студія</a>
-  </li>
-  <li class="heder-page">
-    <a class="heder-link" href="./portfolio.html">Портфоліо</a>
-  </li>
-  <li class="heder-page">
-    <a class="heder-link" href="URL">Контакти</a>
-  </li>
-</ul>
-<ul class="contacts-list">
-  <li class="contacts-item"><a class="heder-contacts"href="mailto:info@example.com">info@devstudio.com</a></li>
-  <li class="contacts-item"><a class="heder-contacts" href="tel:+380991111111">+38 099 111 11 11</a></li>
-</ul>
-</div>
-  </header>
+  </head>
+  <body>
+    <!-- Header -->
+    <header class="header">
+      <div class="container">
+        <a class="logo" href="/index.html"
+          >Web<span class="header-color">Studio</span></a
+        >
+        <ul class="heder-list">
+          <li class="heder-page">
+            <a class="heder-link" href="/">Студія</a>
+          </li>
+          <li class="heder-page">
+            <a class="heder-link" href="./portfolio.html">Портфоліо</a>
+          </li>
+          <li class="heder-page">
+            <a class="heder-link" href="URL">Контакти</a>
+          </li>
+        </ul>
+        <ul class="contacts-list">
+          <li class="contacts-item">
+            <a class="heder-contacts" href="mailto:info@example.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="contacts-item">
+            <a class="heder-contacts" href="tel:+380991111111"
+              >+38 099 111 11 11</a
+            >
+          </li>
+        </ul>
+      </div>
+    </header>
 
-  <!-- Main -->
+    <!-- Main -->
 
-  <main>
-    <!-- Section Hero -->
-    <section class="hero-section"> 
-      <h1 class="hero-text">ЕФЕКТИВНІ РІШЕННЯ ДЛЯ <br> ВАШОГО БІЗНЕСУ</h1>
-      <button type="button" class="hero-button">Замовити послугу</button>
-      
+    <main>
+      <!-- Section Hero -->
+      <section class="hero-section">
+        <h1 class="hero-text">
+          ЕФЕКТИВНІ РІШЕННЯ ДЛЯ <br />
+          ВАШОГО БІЗНЕСУ
+        </h1>
+        <button type="button" class="hero-button">Замовити послугу</button>
       </section>
-<!-- Section coments --> 
-<section class="coments-section">
-  <div class="container">
-    <ul class="coments-list">
-<li class="cometns-item">
-  <h2 class="coments-title">УВАГА ДО ДЕТАЛЕЙ</h2>
-  <p class="coments-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-    Voluptatem veritatis exercitationem velit magnam iure.</p></li>
-    <li class="cometns-item">
-      <h2 class="coments-title">ПУНКТУАЛЬНІСТЬ</h2>
-      <p class="coments-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-        Voluptatem veritatis exercitationem velit magnam iure.</p></li>
-        <li class="cometns-item">
-          <h2 class="coments-title">ПЛАНУВАННЯ</h2>
-          <p class="coments-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-            Voluptatem veritatis exercitationem velit magnam iure.</p></li>
+      <!-- Section coments -->
+      <section class="coments-section">
+        <div class="container">
+          <ul class="coments-list">
+            <li class="cometns-item">
+              <h2 class="coments-title">УВАГА ДО ДЕТАЛЕЙ</h2>
+              <p class="coments-text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Voluptatem veritatis exercitationem velit magnam iure.
+              </p>
+            </li>
+            <li class="cometns-item">
+              <h2 class="coments-title">ПУНКТУАЛЬНІСТЬ</h2>
+              <p class="coments-text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Voluptatem veritatis exercitationem velit magnam iure.
+              </p>
+            </li>
+            <li class="cometns-item">
+              <h2 class="coments-title">ПЛАНУВАННЯ</h2>
+              <p class="coments-text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Voluptatem veritatis exercitationem velit magnam iure.
+              </p>
+            </li>
             <li class="cometns-item">
               <h2 class="coments-title">СУЧАСНІ ТЕХНОЛОГІЇ</h2>
-              <p class="coments-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-                Voluptatem veritatis exercitationem velit magnam iure.</p></li>            
-</ul>
-</div>
-</section>
-<!-- Section we-doing -->
- <section class="work-section">
-  <div class="container">
-  <h2 class="work-title">Чим ми займаємося</h2>
-  <ul class="work-list">
-    <li>
-      <img class="work-foto" src="./images/box1.jpg" alt="img1">
-    </li>
-    <li>
-      <img class="work-foto" src="./images/img.jpg" alt="img2">
-    </li>
-    <li>
-      <img class="work-foto" src="./images/box3.jpg" alt="img3">
-    </li>
-  </ul>
-</div>
-</section>
-<!-- Section team -->
-<section class="team-section">
-  <div class="container">
-  <h2 class="team-title">Наша команда</h2>
-<ul class="team-list">
-<li class="team-item" > 
-  <img class="team-foto" src="./images/img(1).jpg" alt="img4">
-  <h2 class="team-name">Ігор Дем’яненко</h2>
-  <p class="team-coment">Product Designer</p>
-</li>
-<li class="team-item" >
-  <img class="team-foto" src="./images/img(2).jpg" alt="img5">
-  <h2 class="team-name">Ольга Репіна</h2>
-  <p class="team-coment">Frontend Developer</p>
-</li>
-<li class="team-item" >
-   <img class="team-foto" src="./images/img(3).jpg" alt="img6">
-  <h2 class="team-name">Микола Тарасов</h2>
-  <p class="team-coment">Marketing</p>
-</li>
-<li class="team-item" >
-  <img class="team-foto" src="./images/img(4).jpg" alt="img7">
-  <h2 class="team-name" >Михайло Єрмаков</h2>
-  <p class="team-coment">UI Designer</p>
-</li>
-</ul>
-</div>
-</section>
-  </main>
-  <!-- Footer -->
-  <footer class="footer">
-    <div class="container">
-    <ul class="footer-list">
-    <li class="fotter-item">
-      <a class="logo" href="/index.html">Web<span class="footer-color">Studio</span></a>
-    </li>
-    <li class="fotter-item">
-    <address class="footer-map">м. Київ, пр-т Лесі Українки, 26</address>
-  </li>
-  <li class="fotter-item">
-    <a class="footer-mail" href="mailto:info@example.com">info@example.com</a>
-  </li>
-    <li class="fotter-item">
-    <a class="footer-tel" href="tel:+380991111111">+38 099 111 11 11</a>
-  </li>
-  </ul>
-</div>
-  </footer>
-  <!-- /Footer -->
-</body>
+              <p class="coments-text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Voluptatem veritatis exercitationem velit magnam iure.
+              </p>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <!-- Section we-doing -->
+      <section class="work-section">
+        <div class="container">
+          <h2 class="work-title">Чим ми займаємося</h2>
+          <ul class="work-list">
+            <li>
+              <img class="work-foto" src="./images/box1.jpg" alt="img1" />
+            </li>
+            <li>
+              <img class="work-foto" src="./images/img.jpg" alt="img2" />
+            </li>
+            <li>
+              <img class="work-foto" src="./images/box3.jpg" alt="img3" />
+            </li>
+          </ul>
+        </div>
+      </section>
+      <!-- Section team -->
+      <section class="team-section">
+        <div class="container">
+          <h2 class="team-title">Наша команда</h2>
+          <ul class="team-list">
+            <li class="team-item">
+              <img class="team-foto" src="./images/img(1).jpg" alt="img4" />
+              <h2 class="team-name">Ігор Дем’яненко</h2>
+              <p class="team-coment">Product Designer</p>
+            </li>
+            <li class="team-item">
+              <img class="team-foto" src="./images/img(2).jpg" alt="img5" />
+              <h2 class="team-name">Ольга Репіна</h2>
+              <p class="team-coment">Frontend Developer</p>
+            </li>
+            <li class="team-item">
+              <img class="team-foto" src="./images/img(3).jpg" alt="img6" />
+              <h2 class="team-name">Микола Тарасов</h2>
+              <p class="team-coment">Marketing</p>
+            </li>
+            <li class="team-item">
+              <img class="team-foto" src="./images/img(4).jpg" alt="img7" />
+              <h2 class="team-name">Михайло Єрмаков</h2>
+              <p class="team-coment">UI Designer</p>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </main>
+    <!-- Footer -->
+    <footer class="footer">
+      <div class="container">
+        <ul class="footer-list">
+          <li class="fotter-item">
+            <a class="logo" href="/index.html"
+              >Web<span class="footer-color">Studio</span></a
+            >
+          </li>
+          <li class="fotter-item">
+            <address class="footer-map">
+              м. Київ, пр-т Лесі Українки, 26
+            </address>
+          </li>
+          <li class="fotter-item">
+            <a class="footer-mail" href="mailto:info@example.com"
+              >info@example.com</a
+            >
+          </li>
+          <li class="fotter-item">
+            <a class="footer-tel" href="tel:+380991111111">+38 099 111 11 11</a>
+          </li>
+        </ul>
+      </div>
+    </footer>
+    <!-- /Footer -->
+  </body>
 </html>
