--- a/index.html
+++ b/index.html
@@ -91,13 +91,13 @@
         <div class="container">
           <h2 class="work-title">Чим ми займаємося</h2>
           <ul class="work-list">
-            <li>
+            <li class="work-item">
               <img class="work-foto" src="./images/box1.jpg" alt="img1" />
             </li>
-            <li>
+            <li class="work-item">
               <img class="work-foto" src="./images/img.jpg" alt="img2" />
             </li>
-            <li>
+            <li class="work-item">
               <img class="work-foto" src="./images/box3.jpg" alt="img3" />
             </li>
           </ul>
