--- a/index.html
+++ b/index.html
@@ -27,14 +27,20 @@
         </ul>
         <ul class="contacts-list">
           <li class="contacts-item">
-            <a class="heder-contacts" href="mailto:info@example.com"
-              >info@devstudio.com</a
-            >
+            <a class="heder-contacts" href="mailto:info@example.com">
+              <svg class="icon-header">
+                <use href="./images/symbol-defs.svg#icon-w-mail"></use>
+              </svg>
+              info@devstudio.com
+            </a>
           </li>
           <li class="contacts-item">
-            <a class="heder-contacts" href="tel:+380991111111"
-              >+38 099 111 11 11</a
-            >
+            <a class="heder-contacts" href="tel:+380991111111">
+              <svg class="icon-header">
+                <use href="./images/symbol-defs.svg#icon-smartphone"></use>
+              </svg>
+              +38 099 111 11 11
+            </a>
           </li>
         </ul>
       </div>
@@ -51,6 +57,9 @@
         </h1>
         <button type="button" class="hero-button">Замовити послугу</button>
       </section>
+
+      <div class="madal"></div>
+
       <!-- Section coments -->
       <section class="coments-section">
         <div class="container">
@@ -112,21 +121,112 @@
               <img class="team-foto" src="./images/img(1).jpg" alt="img4" />
               <h2 class="team-name">Ігор Дем’яненко</h2>
               <p class="team-coment">Product Designer</p>
+              <ul class="icon-list">
+                <li class="icon-item">
+                  <svg class="icon-elipce">
+                    <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                  </svg>
+                </li>
+                <li class="icon-item">
+                  <svg class="icon-elipce">
+                    <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                  </svg>
+                </li>
+                <li class="icon-item">
+                  <svg class="icon-elipce">
+                    <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                  </svg>
+                </li>
+                <li class="icon-item">
+                  <svg class="icon-elipce">
+                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                  </svg>
+                </li>
+              </ul>
             </li>
             <li class="team-item">
               <img class="team-foto" src="./images/img(2).jpg" alt="img5" />
               <h2 class="team-name">Ольга Репіна</h2>
               <p class="team-coment">Frontend Developer</p>
+
+              <ul class="icon-list">
+                <li class="icon-item">
+                  <svg class="icon-elipce">
+                    <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                  </svg>
+                </li>
+                <li class="icon-item">
+                  <svg class="icon-elipce">
+                    <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                  </svg>
+                </li>
+                <li class="icon-item">
+                  <svg class="icon-elipce">
+                    <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                  </svg>
+                </li>
+                <li class="icon-item">
+                  <svg class="icon-elipce">
+                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                  </svg>
+                </li>
+              </ul>
             </li>
             <li class="team-item">
               <img class="team-foto" src="./images/img(3).jpg" alt="img6" />
               <h2 class="team-name">Микола Тарасов</h2>
               <p class="team-coment">Marketing</p>
+
+              <ul class="icon-list">
+                <li class="icon-item">
+                  <svg class="icon-elipce">
+                    <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                  </svg>
+                </li>
+                <li class="icon-item">
+                  <svg class="icon-elipce">
+                    <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                  </svg>
+                </li>
+                <li class="icon-item">
+                  <svg class="icon-elipce">
+                    <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                  </svg>
+                </li>
+                <li class="icon-item">
+                  <svg class="icon-elipce">
+                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                  </svg>
+                </li>
+              </ul>
             </li>
             <li class="team-item">
               <img class="team-foto" src="./images/img(4).jpg" alt="img7" />
               <h2 class="team-name">Михайло Єрмаков</h2>
               <p class="team-coment">UI Designer</p>
+
+              <ul class="icon-list">
+                <li class="icon-item">
+                  <svg class="icon-elipce">
+                    <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                  </svg>
+                </li>
+                <li class="icon-item">
+                  <svg class="icon-elipce">
+                    <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                  </svg>
+                </li>
+                <li class="icon-item">
+                  <svg class="icon-elipce">
+                    <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                  </svg>
+                </li>
+                <li class="icon-item">
+                  <svg class="icon-elipce">
+                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                  </svg>
+                </li>
+              </ul>
             </li>
           </ul>
         </div>
@@ -153,6 +253,26 @@
           </li>
           <li class="fotter-item">
             <a class="footer-tel" href="tel:+380991111111">+38 099 111 11 11</a>
+          </li>
+          <li class="fotter-reklam-item">
+            <p class="fotter-reklam">
+              Приєднуйтесь
+              <svg class="icon-elipce">
+                <use href="./images/symbol-defs.svg#icon-instagram"></use>
+              </svg>
+
+              <svg class="icon-elipce">
+                <use href="./images/symbol-defs.svg#icon-twitter"></use>
+              </svg>
+
+              <svg class="icon-elipce">
+                <use href="./images/symbol-defs.svg#icon-facebook"></use>
+              </svg>
+
+              <svg class="icon-elipce">
+                <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+              </svg>
+            </p>
           </li>
         </ul>
       </div>
