--- a/index.html
+++ b/index.html
@@ -110,6 +110,18 @@
               <img class="work-foto" src="./images/box3.jpg" alt="img3" />
             </li>
           </ul>
+          <ul>
+            <li class="positioning-list">
+              <a class="positioning-item">ДЕСКТОПНІ ЗАСТОСУНКИ
+              </a>
+            </li>
+            <li class="positioning-list">
+              <a class="positioning-item">МОБІЛЬНІ ЗАСТОСУНКИ</a>
+            </li>
+            <li class="positioning-list">
+              <a class="positioning-item">ДИЗАЙНЕРСЬКІ РІШЕННЯ</a>
+            </li>
+          </ul>
         </div>
       </section>
       <!-- Section team -->
@@ -254,27 +266,30 @@
           <li class="fotter-item">
             <a class="footer-tel" href="tel:+380991111111">+38 099 111 11 11</a>
           </li>
-          <li class="fotter-reklam-item">
-            <p class="fotter-reklam">
-              Приєднуйтесь
-              <svg class="icon-elipce">
-                <use href="./images/symbol-defs.svg#icon-instagram"></use>
-              </svg>
-
-              <svg class="icon-elipce">
-                <use href="./images/symbol-defs.svg#icon-twitter"></use>
-              </svg>
-
-              <svg class="icon-elipce">
-                <use href="./images/symbol-defs.svg#icon-facebook"></use>
-              </svg>
-
-              <svg class="icon-elipce">
-                <use href="./images/symbol-defs.svg#icon-linkedin"></use>
-              </svg>
-            </p>
-          </li>
-        </ul>
+          </ul>
+          <ul class="reklam-list">
+            <li class="reklam-item">
+              <a class="footer-reklam">
+                Приєднуйтесь
+                <svg class="icon-elipce">
+                  <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                </svg>
+  
+                <svg class="icon-elipce">
+                  <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                </svg>
+  
+                <svg class="icon-elipce">
+                  <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                </svg>
+  
+                <svg class="icon-elipce">
+                  <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+          </ul>
       </div>
     </footer>
     <!-- /Footer -->
