--- a/Portfolio.html
+++ b/Portfolio.html
@@ -26,14 +26,20 @@
         </ul>
         <ul class="contacts-list">
           <li class="contacts-item">
-            <a class="heder-contacts" href="mailto:info@example.com"
-              >info@devstudio.com</a
-            >
+            <a class="heder-contacts" href="mailto:info@example.com">
+              <svg class="icon-header">
+                <use href="./images/symbol-defs.svg#icon-w-mail"></use>
+              </svg>
+              info@devstudio.com
+            </a>
           </li>
           <li class="contacts-item">
-            <a class="heder-contacts" href="tel:+380991111111"
-              >+38 099 111 11 11</a
-            >
+            <a class="heder-contacts" href="tel:+380991111111">
+              <svg class="icon-header">
+                <use href="./images/symbol-defs.svg#icon-smartphone"></use>
+              </svg>
+              +38 099 111 11 11
+            </a>
           </li>
         </ul>
       </div>
@@ -154,6 +160,28 @@
           </li>
           <li class="fotter-item">
             <a class="footer-tel" href="tel:+380991111111">+38 099 111 11 11</a>
+          </li>
+        </ul>
+        <ul class="reklam-list">
+          <li class="reklam-item">
+            <a class="footer-reklam">
+              Приєднуйтесь
+              <svg class="icon-elipce">
+                <use href="./images/symbol-defs.svg#icon-instagram"></use>
+              </svg>
+
+              <svg class="icon-elipce">
+                <use href="./images/symbol-defs.svg#icon-twitter"></use>
+              </svg>
+
+              <svg class="icon-elipce">
+                <use href="./images/symbol-defs.svg#icon-facebook"></use>
+              </svg>
+
+              <svg class="icon-elipce">
+                <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+              </svg>
+            </a>
           </li>
         </ul>
       </div>
