--- a/index.html
+++ b/index.html
@@ -58,7 +58,34 @@
         <button type="button" class="hero-button">Замовити послугу</button>
       </section>
 
-      <div class="madal"></div>
+      <div class="madal">
+        <svg class="icon-medal">
+          <use href=""></use>
+        </svg>
+        <li>
+          <p class="medal-hero">Залиште свої дані, ми Вам зателефонуємо</p>
+       </li> 
+       <li>
+         <p class="medal-text">Ім’я</p>
+        <textarea class="medal-textarea">
+        </textarea>
+      </li>
+      <li>
+        <p class="medal-text">Телефон</p>
+       <textarea class="medal-textarea">
+       </textarea>
+     </li>
+     <li>
+      <p class="medal-text">Пошта</p>
+     <textarea class="medal-textarea">
+     </textarea>
+   </li>
+   <li>
+    <p class="medal-text">Коментарі</p>
+   <textarea class="medal-textarea">
+   </textarea>
+ </li>
+      </div>
 
       <!-- Section coments -->
       <section class="coments-section">
@@ -102,23 +129,15 @@
           <ul class="work-list">
             <li class="work-item">
               <img class="work-foto" src="./images/box1.jpg" alt="img1" />
-            </li>
-            <li class="work-item">
-              <img class="work-foto" src="./images/img.jpg" alt="img2" />
-            </li>
-            <li class="work-item">
-              <img class="work-foto" src="./images/box3.jpg" alt="img3" />
-            </li>
-          </ul>
-          <ul>
-            <li class="positioning-list">
               <a class="positioning-item">ДЕСКТОПНІ ЗАСТОСУНКИ
               </a>
             </li>
-            <li class="positioning-list">
+            <li class="work-item">
+              <img class="work-foto" src="./images/img.jpg" alt="img2" />
               <a class="positioning-item">МОБІЛЬНІ ЗАСТОСУНКИ</a>
             </li>
-            <li class="positioning-list">
+            <li class="work-item">
+              <img class="work-foto" src="./images/box3.jpg" alt="img3" />
               <a class="positioning-item">ДИЗАЙНЕРСЬКІ РІШЕННЯ</a>
             </li>
           </ul>
