--- a/index.html
+++ b/index.html
@@ -55,37 +55,8 @@
           ЕФЕКТИВНІ РІШЕННЯ ДЛЯ <br />
           ВАШОГО БІЗНЕСУ
         </h1>
-        <button type="button" class="hero-button">Замовити послугу</button>
+        <button data-open-modal class="hero-button">Замовити послугу</button>
       </section>
-
-      <div class="madal">
-        <svg class="icon-medal">
-          <use href=""></use>
-        </svg>
-        <li>
-          <p class="medal-hero">Залиште свої дані, ми Вам зателефонуємо</p>
-       </li> 
-       <li>
-         <p class="medal-text">Ім’я</p>
-        <textarea class="medal-textarea">
-        </textarea>
-      </li>
-      <li>
-        <p class="medal-text">Телефон</p>
-       <textarea class="medal-textarea">
-       </textarea>
-     </li>
-     <li>
-      <p class="medal-text">Пошта</p>
-     <textarea class="medal-textarea">
-     </textarea>
-   </li>
-   <li>
-    <p class="medal-text">Коментарі</p>
-   <textarea class="medal-textarea">
-   </textarea>
- </li>
-      </div>
 
       <!-- Section coments -->
       <section class="coments-section">
@@ -312,5 +283,64 @@
       </div>
     </footer>
     <!-- /Footer -->
+    <div data-backdrop class="backdrop">
+      <div class="madal">
+        <button data-close-modal> 
+          <svg class="icon-medal">
+            <use href="./images/symbol-defs.svg#icon-x">
+            </use>
+          </svg>
+        </button>
+        
+
+          <p class="medal-hero">Залиште свої дані, ми Вам зателефонуємо</p>
+         <label for="name" class="medal-text">Ім’я</label>
+         <svg class="icon-medal">
+          <use href="./images/symbol-defs.svg#icon-name">
+          </use>
+        </svg>
+        <input id="name" class="medal-textarea">
+        <p class="medal-text">Телефон</p>
+        <svg class="icon-medal">
+          <use href="./images/symbol-defs.svg#telefonenumber">
+          </use>
+        </svg>
+       <input class="medal-textarea">
+      <p class="medal-text">Пошта</p>
+      <svg class="icon-medal">
+        <use href="./images/symbol-defs.svg#gmailadress">
+        </use>
+      </svg>
+     <input class="medal-textarea">
+   <textarea class="medal-coment-textaera" placeholder="коментарі">
+   </textarea>
+   <p class="medal-condition">
+    Погоджуюсь з розсилкою і приймаю Умови договору
+  </p>
+   <button class="medal-button">
+    Надіслати
+   </button>
+   </div>
+      </div>
+    <script>
+      const refs = {
+        openModalBtn: document.querySelector('[data-open-modal]'),
+        closeModalBtn: document.querySelector('[data-close-modal]'),
+        backdrop: document.querySelector('[data-backdrop]'),
+      };
+
+      refs.openModalBtn.addEventListener('click', toggleModal);
+      refs.closeModalBtn.addEventListener('click', toggleModal);
+
+      refs.backdrop.addEventListener('click', logBackdropClick);
+
+      function toggleModal() {
+        refs.backdrop.classList.toggle('is-hidden');
+      }
+
+      function logBackdropClick() {
+        console.log('Це клік в бекдроп');
+      }
+    </script>
   </body>
 </html>
