--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="./SASS/main.css" />
   </head>
   <body>
     <!-- Header -->
@@ -257,10 +257,10 @@
             <a class="footer-tel" href="tel:+380991111111">+38 099 111 11 11</a>
           </li>
           </ul>
+          <h1 class="reklam-text"> Приєднуйтесь</h1>
           <ul class="reklam-list">
             <li class="reklam-item">
               <a class="footer-reklam">
-                Приєднуйтесь
                 <svg class="icon-elipce">
                   <use href="./images/symbol-defs.svg#icon-instagram"></use>
                 </svg>
